objects/LAT_Eventos_Settings__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ContractType__c</fullName>
        <label>Tipo Contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contratos</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ativo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_type__c</fullName>
        <label>Tipo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marcas Ativadas</fullName>
                </value>
                <value>
                    <fullName>Event Activations</fullName>
                    <label>Ativações Eventos</label>
                </value>
                <value>
                    <fullName>Marcas Ativadas S&amp;R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cadastro Contratos e Eventos</label>
    <listViews>
        <fullName>Activaciones</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Event Activations</value>
        </filters>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ativações Ativas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Activaciones_Contratos</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_ContractType__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Event Activations</value>
        </filters>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_ContractType__c</field>
            <operation>equals</operation>
            <value>Contratos</value>
        </filters>
        <label>Ativações Ativas Contratos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>LAT_type__c</columns>
        <columns>NAME</columns>
        <columns>LAT_isActive__c</columns>
        <columns>LAT_ContractType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Ativa_es_Ativas_Eventos</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_isActive__c</columns>
        <columns>LAT_ContractType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Event Activations</value>
        </filters>
        <filters>
            <field>LAT_ContractType__c</field>
            <operation>equals</operation>
            <value>Eventos</value>
        </filters>
        <label>Ativações Ativas Eventos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ativa_es_Inativas_Contratos</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_ContractType__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAT_ContractType__c</field>
            <operation>equals</operation>
            <value>Contratos</value>
        </filters>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Event Activations</value>
        </filters>
        <label>Ativações Inativas Contratos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LAT_InactiveActivations</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Event Activations</value>
        </filters>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAT_ContractType__c</field>
            <operation>equals</operation>
            <value>Eventos</value>
        </filters>
        <label>Ativações Inativas Eventos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LAT_MarcasAtivadasInactivas</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_ContractType__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Marcas Ativadas</value>
        </filters>
        <label>MArcas Ativadas Inactivas Eventos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LAT_Marcas_Ativadas</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_ContractType__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Marcas Ativadas</value>
        </filters>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_ContractType__c</field>
            <operation>equals</operation>
            <value>Eventos</value>
        </filters>
        <label>Marcas Ativadas Activas Eventos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Marcas_Ativadas_Activas_Contratos</fullName>
        <columns>NAME</columns>
        <columns>LAT_type__c</columns>
        <columns>LAT_ContractType__c</columns>
        <columns>LAT_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_type__c</field>
            <operation>equals</operation>
            <value>Marcas Ativadas</value>
        </filters>
        <filters>
            <field>LAT_isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_ContractType__c</field>
            <operation>equals</operation>
            <value>Contratos</value>
        </filters>
        <label>Marcas Ativadas Activas Contratos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadastros Contratos e Eventos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>